--- a/views/pages/partials/pagination.ejs
+++ b/views/pages/partials/pagination.ejs
@@ -1,11 +1,8 @@
-<div class="container">
+
+  <div class="join">
     <input hidden id="currentPage" value="0">
-    <nav aria-label="..." style="text-align: center;">
-      <ul class="pagination pagination-lg">
-        <li class="page-item "><a class="page-link" href="">1</a></li>
-        <li class="page-item"><a class="page-link" href="">2</a></li>
-        <li class="page-item"><a class="page-link" href="">3</a></li>
-        <li class="page-item"><a class="page-link" href="">...</a></li>
-      </ul>
-    </nav>
+    <button class="join-item btn page-link">1</button>
+    <button class="join-item btn page-link">2</button>
+    <button class="join-item btn page-link">3</button>
+    <button class="join-item btn page-link">...</button>
   </div>
