--- a/views/partials/bars/nonuserbar.ejs
+++ b/views/partials/bars/nonuserbar.ejs
@@ -1,14 +1,14 @@
 <li >
 <a
   href="/login"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3">Login</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span >Login</span></a
 >
 </li>
 
 <li>
   <a
   href="/register"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3">Register</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span >Register</span></a
 >
 </li>
 
