--- a/views/partials/bars/adminbar.ejs
+++ b/views/partials/bars/adminbar.ejs
@@ -1,28 +1,28 @@
 <li >
   <a
   href="/admin"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-eye-open mt-2"></span><span class="mt-3">Dashboard</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span class="fa fa-eye fa-md "></span><span >Dashboard</span></a
 >
 </li>
 
 <li >
   <a
   href="/admin/userdata"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="fa fa-table fa-lg"></span> Users Data</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><span class="fa fa-table fa-md"></span> Users Data</span></a
 >
 </li>
 
 <li >
   <a
   href="/admin/tree"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="fa fa-timeline fa-lg"></span> Users Tree</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><span class="fa fa-timeline fa-md"></span> Users Tree</span></a
 >
 </li>
 
 <li >
   <a
   href="/admin/ordersdata"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="fa fa-cubes fa-lg"></span> Orders Data</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><span class="fa fa-cubes fa-md"></span> Orders Data</span></a
 >
 </li>
 
@@ -31,7 +31,7 @@
 <li >
   <a
     href="/logout"
-    class="btn btn-ghost btn-lg rounded-btn"><Logout class="mt-3">Logout</span></a
+    class="btn btn-ghost btn-md rounded-btn"><Logout >Logout</span></a
   >
   </li>
 
