--- a/views/partials/bars/userbar.ejs
+++ b/views/partials/bars/userbar.ejs
@@ -1,33 +1,33 @@
 <li><a
   href="/"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="glyphicon glyphicon-home "></span> HOME</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><span class="fa fa-home "></span> HOME</span></a
 ></li>
 
 <li><a
   href="/user"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="glyphicon glyphicon-user "></span> User</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><span class="fa fa-user "></span> User</span></a
 ></li>
 
 <li><a
   href="/order"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><span class="glyphicon glyphicon-list-alt "></span> Order</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><span class="fa fa-list "></span> Order</span></a
 ></li>
 
 <li><a
   href="/money"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3"><div class="badge badge-lg"><%=wallet.money%></div> BATH</span></a
+  class="btn btn-ghost btn-md rounded-btn"><span ><div class="badge badge-sm"><%=wallet.money%></div> BATH</span></a
 ></li>
 
 <li><a
   href="/cart"
-  class="btn btn-ghost btn-lg rounded-btn"><span class="glyphicon glyphicon-shopping-cart mt-2"></span><span class="mt-3">(
-    <div class="badge badge-lg"><%if(total){%><%=total%><%}else{%>0<%}%></div> BATH )</span> </a
+  class="btn btn-ghost btn-md rounded-btn"><span class="fa fa-shopping-cart "></span><span >(
+    <div class="badge badge-sm"><%if(total){%><%=total%><%}else{%>0<%}%></div> BATH )</span> </a
 ></li>
 
 <li >
   <a
     href="/logout"
-    class="btn btn-ghost btn-lg rounded-btn"><span class="mt-3">Logout</span></a
+    class="btn btn-ghost btn-md rounded-btn"><span >Logout</span></a
   >
   </li>
 
