--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,8 +8,8 @@
 
 </div>
 
-<div class="drawer-side w-screen">
-  <label for="my-drawer-3" class="drawer-overlay"></label> 
+<div class="drawer-side w-screen overflow-hidden">
+  <label for="my-drawer-3" class="drawer-overlay h-screen"></label> 
 
   <ul class="menu p-4 w-80 h-full bg-base-200 text-slate-200">
     <div class="flex px-2 mx-2 justify-center py-12">
