--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,8 @@
 
 
     <!-- js plugin -->
+    <script src="https://unpkg.com/htmx.org@1.9.3"></script>
+
     <script src="//unpkg.com/alpinejs" defer></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -22,12 +24,12 @@
     />
 
         <!-- Bootstrap core CSS -->
-        <link
+        <!-- <link
         href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
         rel="stylesheet"
         id="bootstrap-css"
       />
-      <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
   
       <!-- tailwind -->
       <link href="/css/output.css" rel="stylesheet" />
@@ -54,22 +56,22 @@
     />
   </head>
 
-  <body class="flex flex-col h-max min-h-screen justify-between">
+  <body class="min-h-screen">
 
     <div class="drawer">
       <input id="my-drawer-3" type="checkbox" class="drawer-toggle" /> 
       <div class="drawer-content flex flex-col">
         <!-- Navbar -->
-        <div class="w-full navbar bg-base-300">
+        <div class="w-screen navbar bg-base-300 mb-5">
           <div class="flex-none lg:hidden">
             <label for="my-drawer-3" class="btn btn-square btn-ghost">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-6 h-6 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </label>
           </div> 
           <div class="flex-none px-2 mx-2">
-            <img class="w-auto h-20" src="\images\logo1.svg">
+            <img class="w-auto h-12" src="\images\logo1.svg">
           </div>
-          <div class="flex-none block invisible md:visible">
+          <div class="flex-none hidden lg:block">
             <ul class="menu menu-horizontal">
               <%if(user){%> <%if(user.isAdmin){%> <%-include("bars/adminbar")-%>
               <%}else{%> <%-include("bars/userbar", {wallet: wallet||null})-%> <%}%>
