--- a/views/pages/partials/pagination.ejs
+++ b/views/pages/partials/pagination.ejs
@@ -1,6 +1,6 @@
+<input hidden id="currentPage" value="0">
 
-  <div class="join">
-    <input hidden id="currentPage" value="0">
+  <div class="flex join mb-4 justify-center">
     <button class="join-item btn page-link">1</button>
     <button class="join-item btn page-link">2</button>
     <button class="join-item btn page-link">3</button>
