--- a/views/pages/admin/datatable.ejs
+++ b/views/pages/admin/datatable.ejs
@@ -6,65 +6,45 @@
 <%-include("../partials/pagination.ejs")-%>
 
 
-<div class="panel panel-default">
-  <span id="message"></span>
-  <div class="card">
-    <div class="card-header">
-      <div class="panel-heading">ข้อมูลผู้ใช้</div>
-    </div>
-    <div class="card-body">
-      <div class="table-responsive">
-        <input type="text" class="form-control" id="searchbar" placeholder="Search Data..." style="margin-bottom: 20px; background-color: wheat;"/>
-        <!-- Table -->
-        <table class="table table-striped table-bordered text-center" id="Table">
-          <tr>
-            <th class="text-center" style="width: 15%;">การแก้ไข</th>
-            <th class="text-center" style="width: 5%;">Username</th>
-            <th class="text-center" style="width: 20%;">ชื่อ-นามสกุล</th>
-            <th class="text-center" style="width: 30%;">ที่อยู่</th>
-            <th class="text-center" style="width: 30%;">ธนาคาร</th>
-            <th class="text-center" style="width: 5%;">เงิน</th>
-            <th class="text-center" style="width: 5%;">พ้อย</th>
-            
-          </tr>
-          <tbody id="dataTable">
-            
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
+<div class="container overflow-auto mb-4 p-0">
+  <input type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs mb-4" />  
+  <table class="table bg-white text-center">
+    <tr>
+      <th >การแก้ไข</th>
+      <th >Username</th>
+      <th >ชื่อ-นามสกุล</th>
+      <th >ที่อยู่</th>
+      <th >ธนาคาร</th>
+      <th >เงิน</th>
+      <th >พ้อย</th>
+    </tr>
+    <tbody id="dataTable">
+    </tbody>
+  </table>
 </div>
 
-<dialog class="modal" tabindex="-1" id="action_modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <form method="post" id="form">
-        <div class="modal-header" id="dynamic_modal_title">
-          <h5 class="modal-title">Edit Data</h5>
-        </div>
-        <div class="modal-body">
-          <%-include("admintools/register_form.ejs")-%>
-        </div>
-        <div class="modal-footer">
-          <input type="hidden" name="username" id="username" />
-          <input type="hidden" name="action" id="action" value="Edit" />
-          <button type="submit" class="btn btn-primary" id="action_button">
-            แก้ไข
-          </button>
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-dismiss="modal"
-          >
-            ยกเลิก
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-</dialog>
 
+<dialog class="modal bg-white" id="action_modal">
+  <form method="post" id="form" class="modal-box">
+
+    <h5>Edit Data</h5>
+    <%-include("admintools/register_form.ejs")-%>
+    <input type="hidden" name="username" id="username" />
+    <input type="hidden" name="action" id="action" value="Edit" />
+    <div class="modal-action">
+      <button type="submit" class="btn btn-error" id="action_button">
+        แก้ไข
+      </button>
+      <button
+        type="button"
+        class="btn btn-secondary"
+        onclick="action_modal.closeModal()"
+      >
+        ยกเลิก
+      </button>
+    </div>
+  </form>
+</dialog>
 
 
 
