--- a/views/pages/order/order.ejs
+++ b/views/pages/order/order.ejs
@@ -2,21 +2,19 @@
 
 
 
-<div class="container" style="padding: 25px;">
-    <table id="cart" class="table table-striped table-bordered text-center" style="background-color: white; border: 100px; border-radius: 25px;">
-        <thead>
+<div class="container overflow-auto mb-4">
+    <table id="cart" class="table text-center bg-white ">
           <tr>
-            <th class="text-center" style="width: 10%;">การจัดการ</th>
+            <th class="text-center" style="width: 30%;">การจัดการ</th>
             <th class="text-center" style="width: 30%;">สถานะ</th>
-            <th class="text-center" style="width: 20%;">มูลค่า</th>
-            <th class="text-center" style="width: 10%;">จำนวนสิ่งของ</th>
+            <th class="text-center" style="width: 5%;">มูลค่า</th>
+            <th class="text-center" style="width: 5%;">จำนวนชิ้น</th>
             <th class="text-center" style="width: 30%;">Order Id</th>
           </tr>
-        </thead>
           <%orders.forEach((element)=>{%>
           <tbody>
             <tr>
-              <td  data-th="จัดการ"><a class="btn btn-warning" href="/order/<%=element.orderId%>" <%if(element.status!='ยังไม่ได้ส่งหลักฐานการชำระเงิน'){%>inert<%}%>>ส่งหลักฐานยึนยันการชำระเงิน</a></td>
+              <td  data-th="จัดการ"><a href="/order/<%=element.orderId%>" <%if(element.status!='ยังไม่ได้ส่งหลักฐานการชำระเงิน'){%>class="btn btn-success" inert<%}else{%>class="btn btn-warning"<%}%>>ยึนยันการชำระเงิน</a></td>
               <td  data-th="สถานะ"><%=element.status%></td>
               <td  data-th="มูลค่า"><%=element.total%></td>
               <td  data-th="จำนวนสิ่งของ"><%=element.totalQuantity%></td>
