--- a/views/pages/user/account.ejs
+++ b/views/pages/user/account.ejs
@@ -1,15 +1,15 @@
-<div class="divider my-10 sm:my-20 invisible"></div>
+<div class="divider my-5 sm:my-20 invisible"></div>
 
-<div class="sm:container max-w-screen-md">
-  <div class="container grid grid-cols-2 sm:grid-cols-3 grid-rows-3 sm:grid-rows-2 gap-4 mx-20 mb-4 text-center justify-items-center">
+<div class="sm:container max-w-screen-md mx-20">
+  <div class="sm:container grid grid-cols-2 sm:grid-cols-3 grid-rows-3 sm:grid-rows-2 gap-4 mb-4  text-center justify-items-center">
 
-  <div class="card w-48 bg-secondary shadow-xl">
+  <div class="col-span-2 sm:col-span-1 card w-48 bg-secondary shadow-xl">
     <div class="card-body justify-center">
       <h2 class="card-title justify-center text-white"><%=day%></h2>
     </div>
   </div>
 
-  <div class="card w-48 bg-secondary shadow-xl">
+  <div class="col-span-2 sm:col-span-1 card w-48 bg-secondary shadow-xl">
     <div class="card-body">
       <h2 class="card-title justify-center text-white">รวมทั้งสิ้น</h2>
       <h2 class="card-title justify-center text-white"><%=childIncome+sponsorIncome%> บาท</h2>
@@ -17,14 +17,14 @@
   </div>
 
 
-  <div class="card w-48 bg-secondary shadow-xl">
+  <div class="col-span-2 sm:col-span-1 card w-48 bg-secondary shadow-xl">
     <div class="card-body">
       <h2 class="card-title justify-center text-white">ค่าจับคู่ที่ได้</h2>
       <h2 class="card-title justify-center text-white"><%=childIncome%> บาท</h2>
     </div>
   </div>
 
-  <div class="card w-48 bg-secondary shadow-xl">
+  <div class="col-span-2 sm:col-span-1 card w-48 bg-secondary shadow-xl">
     <div class="card-body">
       <h2 class="card-title justify-center text-white">ค่าแนะนำที่ได้</h2>
       <h2 class="card-title justify-center text-white"><%=sponsorIncome%> บาท</h2>
@@ -32,7 +32,7 @@
   </div>
 
 
-  <div class="card w-48 bg-secondary shadow-xl">
+  <div class="col-span-2 sm:col-span-1 card w-48 bg-secondary shadow-xl">
     <div class="card-body">
       <h2 class="card-title justify-center text-white">ผังคงเหลือ</h2>
       <h2 class="card-title justify-center text-white">
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="card w-48 bg-secondary shadow-xl">
+  <div class="col-span-2 sm:col-span-1 card w-48 bg-secondary shadow-xl">
     <div class="card-body">
       <h2 class="card-title justify-center text-white">ลูกเครือข่าย</h2>
       <h2 class="card-title justify-center text-white">
@@ -64,7 +64,7 @@
 
 
 
-<div class="md:container grid grid-cols-1 sm:grid-cols-2 grid-rows-2 sm:grid-rows-1 gap-4 mx-20 mb-4 text-center justify-items-center overflow-x-auto">
+<div class="md:container grid grid-cols-1 sm:grid-cols-2 grid-rows-2 sm:grid-rows-1 gap-4 mb-4 text-center justify-items-center overflow-x-auto">
     <div class="container bg-white rounded-3xl py-4">
       <a href="user/<%=userName.username%>">
         <div class="row" style="text-align: center">
@@ -77,7 +77,7 @@
         <div id="lev2" class='grid grid-cols-2'></div>
       </a>
     </div>
-    <div class="container bg-white rounded-3xl py-4">
+    <div class="container bg-white rounded-3xl p-2 py-4">
       <a href="user/<%=userName.username%>/sponsor">
             <i class="fa-solid fa-person fa-7x" style="color: red"></i>
             <h1><%=userName.username%></h1>
@@ -94,7 +94,8 @@
     </div>
 </div>
 
-<div class="divider my-10 sm:my-20 invisible"></div></div>
+<div class="divider my-10 sm:my-20 invisible"></div>
+</div>
 
 
 
