--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,8 @@
 
 
     <!-- js plugin -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org@1.9.3"></script>
 
     <script src="//unpkg.com/alpinejs" defer></script>
@@ -56,7 +58,7 @@
     />
   </head>
 
-  <body class="min-h-screen">
+  <body class="min-h-screen w-screen">
 
     <div class="drawer">
       <input id="my-drawer-3" type="checkbox" class="drawer-toggle" /> 
